# email-newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.sqlx/: query-5ba7de71fb690dbd71291fda3edd9dc4e005b4a1cdcf8fd803b34c926cdf99be.json
configuration/: base.yaml  production.yaml
migrations/: 202601051546_create-subscriptions_table.sql
scripts/: build.lua  load_authorization_token.lua
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
