[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Artem Lytvyn", "Luca Palmieri"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "rt"] }
actix-web = "4"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
uuid = { version = "1.19.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.20"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claims = "0.8.0"
validator = "0.20.0"
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
fake = "4.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.9.2"
serde_json = "1.0.149"
wiremock = "0.6.5"
